@@ -1,3 +1,8 @@
+2016-07-02  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/mat.c Check whether reported object size overflows file size.
+
+
 2016-07-01  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/mat.c Safety check for forged and or corrupted data.
